--- a/client/src/auth/registerUser.css
+++ b/client/src/auth/registerUser.css
@@ -7,6 +7,7 @@ html {
 
 .container-login {
   margin-top: 10%;
+  background-color: #333333 !important;
 }
 .user_card {
   height: 400px;
@@ -63,4 +64,17 @@ html {
 .input_pass:focus {
   box-shadow: none !important;
   outline: 0px !important;
+}
+
+.bottom-register {
+  margin-top: 15px !important;
+}
+
+.bottom-register .link{
+  color: #FFF;
+}
+
+label {
+  color: #FFF;
+  font-weight: 500;
 }
