--- a/client/src/components/Header/styles.css
+++ b/client/src/components/Header/styles.css
@@ -24,15 +24,15 @@
 }
 
 .login-button {
-  width: 120px;
-  height: 40px;
+  width: 80px;
+  height: 30px;
   border-radius: 8px;
   background-color: rgb(18, 15, 218);
-
+  border: 0px;
   display: block;
-  margin-left: auto;
 
-  padding-top: 6px;
+  margin-left: 12px;
+
   text-align: center;
   font-size: 16px;
   font-weight: 500;
@@ -42,4 +42,10 @@
 .login-button:hover {
   background-color: rgb(11, 9, 161);
   color: white;
+}
+
+.welcome-text{
+  margin: 0px;
+  font-size: 16px;
+  color: aliceblue;
 }
