--- a/client/src/components/Selector/styles.css
+++ b/client/src/components/Selector/styles.css
@@ -1,10 +1,10 @@
 select {
   text-decoration-style: none;
-  border: 1px solid rgb(6, 0, 128);
+  border: 1px solid rgb(0, 0, 0);
   border-radius: 8px;
   margin: 15px;
   padding: 10px;
-  color: #ffffff;
-  background-color: rgb(18, 15, 218);
+  color: #000000;
+  background-color: rgb(214, 214, 214);
   font-weight: 500;
 }
